--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 950px) {
+  .grid-item {
+    width: 48%;
+    margin: 1%;
+   }
+}
+
 @media screen and (max-width: 700px) {
   .container {
     padding: 1em !important;
@@ -17,8 +24,9 @@
   }
 
  .grid-item {
-  width: 90vw;
-  height: calc(90vw);
+  width: 100%;
+  margin: 0;
+  margin-bottom: 1em;
  }
 
   footer {
